unity無視設定追加

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-project/Library
-project/Temp
-project/*.pidb
-project/*.unityproj
-project/*.sln
-project/*.userprefs
+/project/Library
+/project/Temp
+/project/*.pidb
+/project/*.unityproj
+/project/*.sln
+/project/*.userprefs
