--- a/project/Assembly-CSharp.csproj
+++ b/project/Assembly-CSharp.csproj
@@ -49,6 +49,7 @@
      <Compile Include="Assets\Script\Item.cs" />
      <Compile Include="Assets\Script\Player.cs" />
      <Compile Include="Assets\Script\Score.cs" />
+     <Compile Include="Assets\Script\StartButton.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
